Added more tests

--- a/src/main/resources/javadocs/constant-values.html
+++ b/src/main/resources/javadocs/constant-values.html
@@ -812,7 +812,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 </tr>
 <tbody>
 <tr class="altColor">
-<td class="colFirst"><a id="seedu.address.logic.commands.ShortCutRequestCommand.SHOWING_SHORTCUT_MESSAGE">
+<td class="colFirst"><a id="seedu.address.logic.commands.ShortCutRequestCommandTest.SHOWING_SHORTCUT_MESSAGE">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;java.lang.String</code></td>
 <th class="colSecond" scope="row"><code><a href="seedu/address/logic/commands/ShortCutRequestCommand.html#SHOWING_SHORTCUT_MESSAGE">SHOWING_SHORTCUT_MESSAGE</a></code></th>
