--- a/src/main/resources/javadocs/seedu/address/logic/commands/ShortCutRequestCommand.html
+++ b/src/main/resources/javadocs/seedu/address/logic/commands/ShortCutRequestCommand.html
@@ -126,7 +126,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <li><a href="Command.html" title="class in seedu.address.logic.commands">seedu.address.logic.commands.Command</a></li>
 <li>
 <ul class="inheritance">
-<li>seedu.address.logic.commands.ShortCutRequestCommand</li>
+<li>seedu.address.logic.commands.ShortCutRequestCommandTest</li>
 </ul>
 </li>
 </ul>
@@ -244,7 +244,7 @@ extends <a href="Command.html" title="class in seedu.address.logic.commands">Com
 <pre>public static final&nbsp;java.lang.String SHOWING_SHORTCUT_MESSAGE</pre>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
-<dd><a href="../../../../constant-values.html#seedu.address.logic.commands.ShortCutRequestCommand.SHOWING_SHORTCUT_MESSAGE">Constant Field Values</a></dd>
+<dd><a href="../../../../constant-values.html#seedu.address.logic.commands.ShortCutRequestCommandTest.SHOWING_SHORTCUT_MESSAGE">Constant Field Values</a></dd>
 </dl>
 </li>
 </ul>
